# mobilekv

./: .gitignore  CMakeLists.txt  README.md
benchmark/: kv_benchmark.cpp
build_mobilekv/: DartConfiguration.tcl  kv_cache_test  mobilekv_benchmark  mobilekv_convenience_demo  mobilekv_demo  mobilekv_mixed_precision_demo  mobilekv_packed_layout_demo
build_mobilekv/test/: kv_cache_test[1]_include.cmake  kv_cache_test[1]_tests.cmake
docs/: format-descriptor.md
docs/superpowers/plans/: 2026-03-19-mobile-kv-mixed-precision-manager.md
example/: attention_layer_submit_example.cpp  config_file_basic_example.cpp  config_file_custom_type_example.cpp  config_file_multi_cfg_example.cpp  convenience_api_example.cpp  demo.cpp  dim_block_example.cpp  fp32_prefill_decode_example.cpp  kv_cache_basic_example.cpp  llama.cpp_adapter.cpp  mixed_precision_example.cpp  packed_layout_example.cpp
example/configs/: basic.cfg  custom_type.cfg  high.cfg  low.cfg
include/mobilekv/: kv_cache.h  kv_cache_advanced.h  kv_cache_basic.h  kv_cache_convenience.h  kv_cache_debug.h
src/: kv_cache.cpp
test/: CMakeLists.txt  kv_cache_format_test.cpp  kv_cache_ring_buffer_test.cpp  kv_cache_test.cpp
